0x01-variables_if_else_while/error.txt
1-last_digit.c: In function ‘main’:
1-last_digit.c:26:21: error: expected ‘;’ before ‘return’
   26 |                 puts
      |                     ^
      |                     ;
   27 |                 return (0);
      |                 ~~~~~~
